--- a/angular.json
+++ b/angular.json
@@ -87,7 +87,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "spotrx:build"
+            "buildTarget": "spotrx:build"
           }
         },
         "test": {
