--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/cdk": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
+    "@angular/animations": "^17.0.0-rc.2",
+    "@angular/cdk": "^17.0.0-rc.2",
+    "@angular/common": "^17.0.0-rc.2",
+    "@angular/compiler": "^17.0.0-rc.2",
+    "@angular/core": "^17.0.0-rc.2",
+    "@angular/forms": "^17.0.0-rc.2",
     "@angular/material": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/platform-browser": "^17.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "^17.0.0-rc.2",
+    "@angular/router": "^17.0.0-rc.2",
     "angular-cli-ghpages": "^1.0.3",
     "ngx-skeleton-loader": "^7.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^16.0.0",
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
+    "@angular-devkit/build-angular": "^17.0.0-rc.3",
+    "@angular/cli": "^17.0.0-rc.3",
+    "@angular/compiler-cli": "^17.0.0-rc.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/spotify-web-playback-sdk": "^0.1.12",
@@ -42,6 +42,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "raw-loader": "^4.0.2",
-    "typescript": "~5.0.4"
+    "typescript": "~5.2.2"
   }
 }
