--- a/angular.json
+++ b/angular.json
@@ -18,12 +18,14 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-builders/custom-webpack:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/spotrx",
             "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "browser": "src/main.ts",
+            "polyfills": [
+              "src/polyfills.ts"
+            ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -34,10 +36,7 @@
               "src/styles.scss",
               "src/theme.scss"
             ],
-            "scripts": [],
-            "customWebpackConfig": {
-              "path": "./webpack.partial.js"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -62,9 +61,7 @@
               "outputHashing": "all"
             },
             "development": {
-              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
@@ -73,13 +70,13 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-builders/custom-webpack:dev-server",
+          "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "spotrx:build:production"
+              "buildTarget": "spotrx:build:production"
             },
             "development": {
-              "browserTarget": "spotrx:build:development"
+              "buildTarget": "spotrx:build:development"
             }
           },
           "defaultConfiguration": "development"
