--- a/package.json
+++ b/package.json
@@ -17,18 +17,16 @@
     "@angular/compiler": "^17.0.0-rc.2",
     "@angular/core": "^17.0.0-rc.2",
     "@angular/forms": "^17.0.0-rc.2",
-    "@angular/material": "^16.0.0",
+    "@angular/material": "^17.0.0-rc.2",
     "@angular/platform-browser": "^17.0.0-rc.2",
     "@angular/platform-browser-dynamic": "^17.0.0-rc.2",
     "@angular/router": "^17.0.0-rc.2",
     "angular-cli-ghpages": "^1.0.3",
-    "ngx-skeleton-loader": "^7.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^16.0.0",
     "@angular-devkit/build-angular": "^17.0.0-rc.3",
     "@angular/cli": "^17.0.0-rc.3",
     "@angular/compiler-cli": "^17.0.0-rc.2",
