--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.1",
-    "@angular/cdk": "^17.0.1",
-    "@angular/common": "^17.0.1",
-    "@angular/compiler": "^17.0.1",
-    "@angular/core": "^17.0.1",
-    "@angular/forms": "^17.0.1",
-    "@angular/material": "^17.0.1",
-    "@angular/platform-browser": "^17.0.1",
-    "@angular/platform-browser-dynamic": "^17.0.1",
-    "@angular/router": "^17.0.1",
-    "angular-cli-ghpages": "^1.0.3",
+    "@angular/animations": "^17.1.1",
+    "@angular/cdk": "^17.1.1",
+    "@angular/common": "^17.1.1",
+    "@angular/compiler": "^17.1.1",
+    "@angular/core": "^17.1.1",
+    "@angular/forms": "^17.1.1",
+    "@angular/material": "^17.1.1",
+    "@angular/platform-browser": "^17.1.1",
+    "@angular/platform-browser-dynamic": "^17.1.1",
+    "@angular/router": "^17.1.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.2",
-    "@angular/cli": "^17.0.2",
-    "@angular/compiler-cli": "^17.0.4",
+    "@angular-devkit/build-angular": "^17.1.1",
+    "@angular/cli": "^17.1.1",
+    "@angular/compiler-cli": "^17.1.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/spotify-web-playback-sdk": "^0.1.12",
+    "angular-cli-ghpages": "^2.0.0-beta.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.1.0",
