--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^17.1.1",
     "@angular/platform-browser-dynamic": "^17.1.1",
     "@angular/router": "^17.1.1",
+    "@tanstack/angular-query-devtools-experimental": "^5.20.5",
     "@tanstack/angular-query-experimental": "^5.20.5",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
