--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.1.1",
     "@tanstack/angular-query-devtools-experimental": "^5.20.5",
     "@tanstack/angular-query-experimental": "^5.20.5",
+    "ngx-skeleton-loader": "^9.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
