--- a/package.json
+++ b/package.json
@@ -28,20 +28,17 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^17.0.1",
     "@angular-devkit/build-angular": "^17.1.1",
     "@angular/cli": "^17.1.1",
     "@angular/compiler-cli": "^17.1.1",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@briebug/jest-schematic": "^6.0.0",
     "@tanstack/angular-query-devtools-experimental": "^5.20.5",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^12.11.1",
     "@types/spotify-web-playback-sdk": "^0.1.12",
     "angular-cli-ghpages": "^2.0.0-beta.1",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.4.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "jest": "^29.7.0",
     "raw-loader": "^4.0.2",
     "typescript": "~5.2.2"
   }
