--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,12 +1,11 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine",
       "node",
-      "spotify-web-playback-sdk"
+      "spotify-web-playback-sdk",
+      "jest"
     ]
   },
   "files": [
