--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "^17.1.1",
     "@briebug/jest-schematic": "^6.0.0",
     "@tanstack/angular-query-devtools-experimental": "^5.20.5",
+    "@testing-library/angular": "^15.2.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^12.11.1",
     "@types/spotify-web-playback-sdk": "^0.1.12",
