--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@briebug/jest-schematic": "^6.0.0",
     "@tanstack/angular-query-devtools-experimental": "^5.20.5",
     "@testing-library/angular": "^15.2.0",
+    "@testing-library/jest-dom": "^6.4.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^12.11.1",
     "@types/spotify-web-playback-sdk": "^0.1.12",
