--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tanstack/angular-query-devtools-experimental": "^5.20.5",
     "@testing-library/angular": "^15.2.0",
     "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^12.11.1",
     "@types/spotify-web-playback-sdk": "^0.1.12",
