--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "e2etest": "npx playwright test",
     "deploy": "ng deploy --base-href=/SpotRx/"
   },
   "private": true,
