--- a/angular.json
+++ b/angular.json
@@ -94,6 +94,24 @@
         },
         "deploy": {
           "builder": "angular-cli-ghpages:deploy"
+        },
+        "storybook": {
+          "builder": "@storybook/angular:start-storybook",
+          "options": {
+            "configDir": ".storybook",
+            "browserTarget": "spotrx:build",
+            "compodoc": false,
+            "port": 6006
+          }
+        },
+        "build-storybook": {
+          "builder": "@storybook/angular:build-storybook",
+          "options": {
+            "configDir": ".storybook",
+            "browserTarget": "spotrx:build",
+            "compodoc": false,
+            "outputDir": "storybook-static"
+          }
         }
       }
     }
