--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "e2etest": "npx playwright test",
-    "deploy": "ng deploy --base-href=/SpotRx/"
+    "deploy": "ng deploy --base-href=/SpotRx/",
+    "storybook": "ng run spotrx:storybook",
+    "build-storybook": "ng run spotrx:build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -35,16 +37,25 @@
     "@angular/compiler-cli": "^17.1.1",
     "@briebug/jest-schematic": "^6.0.0",
     "@playwright/test": "^1.42.1",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/angular": "^7.6.17",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/test": "^7.6.17",
     "@tanstack/angular-query-devtools-experimental": "^5.20.5",
     "@testing-library/angular": "^15.2.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
-    "@types/node": "^12.11.1",
+    "@types/node": "^20.10.0",
     "@types/spotify-web-playback-sdk": "^0.1.12",
     "angular-cli-ghpages": "^2.0.0-beta.1",
     "jest": "^29.7.0",
     "raw-loader": "^4.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.6.17",
     "typescript": "~5.2.2"
   }
 }
