--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,7 @@
           "options": {
             "configDir": ".storybook",
             "browserTarget": "spotrx:build",
+            "styles": ["src/styles.scss"],
             "compodoc": false,
             "port": 6006
           }
