--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "src/theme.scss"
+              "src/styles/theme.scss"
             ],
             "scripts": []
           },
