--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "@angular/cli": "^17.1.1",
     "@angular/compiler-cli": "^17.1.1",
     "@briebug/jest-schematic": "^6.0.0",
+    "@compodoc/compodoc": "^1.1.23",
     "@playwright/test": "^1.42.1",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/angular": "^7.6.17",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/test": "^7.6.17",
+    "@storybook/addon-essentials": "0.0.0-pr-26413-sha-81812663",
+    "@storybook/addon-interactions": "0.0.0-pr-26413-sha-81812663",
+    "@storybook/addon-links": "0.0.0-pr-26413-sha-81812663",
+    "@storybook/angular": "0.0.0-pr-26413-sha-81812663",
+    "@storybook/blocks": "0.0.0-pr-26413-sha-81812663",
+    "@storybook/test": "0.0.0-pr-26413-sha-81812663",
     "@tanstack/angular-query-devtools-experimental": "^5.20.5",
     "@testing-library/angular": "^15.2.0",
     "@testing-library/jest-dom": "^6.4.2",
@@ -55,7 +56,7 @@
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.6.17",
+    "storybook": "0.0.0-pr-26413-sha-81812663",
     "typescript": "~5.2.2"
   }
 }
