--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.1.1",
+    "@angular/animations": "^18.0.0",
     "@angular/cdk": "^17.1.1",
-    "@angular/common": "^17.1.1",
-    "@angular/compiler": "^17.1.1",
-    "@angular/core": "^17.1.1",
-    "@angular/forms": "^17.1.1",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "@angular/forms": "^18.0.0",
     "@angular/material": "^17.1.1",
-    "@angular/platform-browser": "^17.1.1",
-    "@angular/platform-browser-dynamic": "^17.1.1",
-    "@angular/router": "^17.1.1",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/router": "^18.0.0",
     "@tanstack/angular-query-experimental": "^5.20.5",
     "ngx-skeleton-loader": "^9.0.0",
     "rxjs": "~7.8.1",
@@ -31,9 +31,9 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.1.1",
-    "@angular/cli": "^17.1.1",
-    "@angular/compiler-cli": "^17.1.1",
+    "@angular/build": "^18.0.1",
+    "@angular/cli": "^18.0.1",
+    "@angular/compiler-cli": "^18.0.0",
     "@briebug/jest-schematic": "^6.0.0",
     "@compodoc/compodoc": "^1.1.23",
     "@playwright/test": "^1.42.1",
@@ -56,6 +56,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^8.1.3",
-    "typescript": "~5.2.2"
+    "typescript": "~5.4.5"
   }
 }
