--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
     "e2etest": "npx playwright test",
     "deploy": "ng deploy --base-href=/SpotRx/",
     "storybook": "ng run spotrx:storybook",
-    "build-storybook": "ng run spotrx:build-storybook"
+    "build-storybook": "ng run spotrx:build-storybook",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -52,6 +54,7 @@
     "@types/spotify-web-playback-sdk": "^0.1.12",
     "angular-cli-ghpages": "^2.0.0-beta.1",
     "jest": "^29.7.0",
+    "jest-preset-angular": "^14.1.0",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
