--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "angular-cli-ghpages": "^2.0.0-beta.1",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.1.0",
+    "mock-match-media": "^0.4.3",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
