--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "src/styles/theme.scss"
+              "src/styles/m3-theme.scss"
             ],
             "scripts": []
           },
@@ -93,7 +93,7 @@
             "browserTarget": "spotrx:build",
             "styles": [
               "src/styles.scss",
-              "src/styles/theme.scss"
+              "src/styles/m3-theme.scss"
             ],
             "compodoc": false,
             "compodocArgs": [
@@ -112,7 +112,7 @@
             "browserTarget": "spotrx:build",
             "styles": [
               "src/styles.scss",
-              "src/styles/theme.scss"
+              "src/styles/m3-theme.scss"
             ],
             "compodoc": false,
             "compodocArgs": [
