--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,13 @@
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
+   	"moduleResolution": "bundler",
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "es2020",
+		"target": "ES2022",
+		"module": "ES2022",
     "esModuleInterop": true,
     "lib": [
-      "es2020",
+      "es2022",
       "dom"
     ],
     "useDefineForClassFields": false
