--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "@tanstack/angular-query-experimental": "^5.38.0",
     "ngx-skeleton-loader": "^9.0.0",
     "rxjs": "~7.8.1",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.1",
