--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,17 @@
 name: deploy
 on: workflow_dispatch
+permissions:
+  contents: write
+  pages: write
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: checkout repo
         uses: actions/checkout@v3
+      - run: |
+          git config --global user.email "${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com"
+          git config --global user.name "${GITHUB_ACTOR}"
       - name: use node.js
         uses: actions/setup-node@v3
         with:
@@ -13,3 +19,5 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run deploy
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
