--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,9 @@ jobs:
     steps:
       - name: checkout repo
         uses: actions/checkout@v3
+      - run: |
+          git config --global user.email "${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com"
+          git config --global user.name "${GITHUB_ACTOR}"
       - name: use node.js
         uses: actions/setup-node@v3
         with:
