--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.10.0",
     "@types/spotify-web-playback-sdk": "^0.1.12",
-    "angular-cli-ghpages": "^2.0.0-beta.2",
+    "angular-cli-ghpages": "^2.0.1",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.1.0",
     "mock-match-media": "^0.4.3",
