--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
-    "@ceski23/stan-js-angular": "^1.0.0",
+    "@ceski23/stan-js-angular": "^1.1.0",
     "@tanstack/angular-query-experimental": "^5.38.0",
     "ngx-skeleton-loader": "^9.0.0",
     "rxjs": "~7.8.1",
+    "stan-js": "^1.6.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
