--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build-storybook": "ng run spotrx:build-storybook",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "eslint"
   },
   "private": true,
   "dependencies": {
@@ -55,6 +56,8 @@
     "@types/node": "^20.10.0",
     "@types/spotify-web-playback-sdk": "^0.1.12",
     "angular-cli-ghpages": "^2.0.1",
+    "angular-eslint": "18.4.0",
+    "eslint": "^9.13.0",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.1.0",
     "mock-match-media": "^0.4.3",
@@ -62,6 +65,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^8.3.5",
-    "typescript": "~5.4.5"
+    "typescript": "~5.4.5",
+    "typescript-eslint": "8.10.0"
   }
 }
