--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -1,7 +1,7 @@
-name: test
+name: code-check
 on: push
 jobs:
-  test:
+  code-check:
     runs-on: ubuntu-latest
     steps:
       - name: checkout repo
@@ -12,4 +12,5 @@ jobs:
           node-version: '22.x'
           cache: 'npm'
       - run: npm ci
-      - run: npm run test
+      - run: npm run lint
+      - run: npm run format:check
