--- a/angular.json
+++ b/angular.json
@@ -25,14 +25,8 @@
 						"browser": "src/main.ts",
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
-						"assets": [
-							"src/favicon.ico",
-							"src/assets"
-						],
-						"styles": [
-							"src/styles.scss",
-							"src/styles/m3-theme.scss"
-						]
+						"assets": ["src/favicon.ico", "src/assets"],
+						"styles": ["src/styles.scss", "src/styles/m3-theme.scss"]
 					},
 					"configurations": {
 						"production": {
@@ -90,17 +84,9 @@
 					"options": {
 						"configDir": ".storybook",
 						"browserTarget": "spotrx:build",
-						"styles": [
-							"src/styles.scss",
-							"src/styles/m3-theme.scss"
-						],
+						"styles": ["src/styles.scss", "src/styles/m3-theme.scss"],
 						"compodoc": false,
-						"compodocArgs": [
-							"-e",
-							"json",
-							"-d",
-							"."
-						],
+						"compodocArgs": ["-e", "json", "-d", "."],
 						"port": 6006
 					}
 				},
@@ -109,27 +95,16 @@
 					"options": {
 						"configDir": ".storybook",
 						"browserTarget": "spotrx:build",
-						"styles": [
-							"src/styles.scss",
-							"src/styles/m3-theme.scss"
-						],
+						"styles": ["src/styles.scss", "src/styles/m3-theme.scss"],
 						"compodoc": false,
-						"compodocArgs": [
-							"-e",
-							"json",
-							"-d",
-							"."
-						],
+						"compodocArgs": ["-e", "json", "-d", "."],
 						"outputDir": "storybook-static"
 					}
 				},
 				"lint": {
 					"builder": "@angular-eslint/builder:lint",
 					"options": {
-						"lintFilePatterns": [
-							"src/**/*.ts",
-							"src/**/*.html"
-						]
+						"lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
 					}
 				}
 			}
@@ -137,8 +112,6 @@
 	},
 	"cli": {
 		"analytics": false,
-		"schematicCollections": [
-			"@angular-eslint/schematics"
-		]
+		"schematicCollections": ["@angular-eslint/schematics"]
 	}
 }
