chore: update angular to v19

--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^18.0.0",
-		"@angular/cdk": "^18.0.0",
-		"@angular/common": "^18.0.0",
-		"@angular/compiler": "^18.0.0",
-		"@angular/core": "^18.0.0",
-		"@angular/forms": "^18.0.0",
-		"@angular/material": "^18.0.0",
-		"@angular/platform-browser": "^18.0.0",
-		"@angular/platform-browser-dynamic": "^18.0.0",
-		"@angular/router": "^18.0.0",
+		"@angular-devkit/build-angular": "^19.0.1",
+		"@angular/animations": "^19.0.0",
+		"@angular/cdk": "^19.0.0",
+		"@angular/common": "^19.0.0",
+		"@angular/compiler": "^19.0.0",
+		"@angular/core": "^19.0.0",
+		"@angular/forms": "^19.0.0",
+		"@angular/material": "^19.0.0",
+		"@angular/platform-browser": "^19.0.0",
+		"@angular/platform-browser-dynamic": "^19.0.0",
+		"@angular/router": "^19.0.0",
 		"@ceski23/stan-js-angular": "^1.1.0",
 		"@tanstack/angular-query-experimental": "^5.38.0",
 		"ngx-skeleton-loader": "^9.0.0",
@@ -37,19 +38,18 @@
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^18.0.1",
-		"@angular/build": "^18.0.1",
-		"@angular/cli": "^18.0.1",
-		"@angular/compiler-cli": "^18.0.0",
+		"@angular/build": "^19.0.1",
+		"@angular/cli": "^19.0.1",
+		"@angular/compiler-cli": "^19.0.0",
 		"@briebug/jest-schematic": "^6.0.0",
 		"@compodoc/compodoc": "^1.1.23",
 		"@playwright/test": "^1.42.1",
-		"@storybook/addon-essentials": "^8.3.5",
-		"@storybook/addon-interactions": "^8.3.5",
-		"@storybook/addon-links": "^8.3.5",
-		"@storybook/angular": "^8.3.5",
-		"@storybook/blocks": "^8.3.5",
-		"@storybook/test": "^8.3.5",
+		"@storybook/addon-essentials": "^8.4.5",
+		"@storybook/addon-interactions": "^8.4.5",
+		"@storybook/addon-links": "^8.4.5",
+		"@storybook/angular": "^8.4.5",
+		"@storybook/blocks": "^8.4.5",
+		"@storybook/test": "^8.4.5",
 		"@tanstack/angular-query-devtools-experimental": "^5.20.5",
 		"@testing-library/angular": "^15.2.0",
 		"@testing-library/jest-dom": "^6.4.2",
@@ -62,14 +62,12 @@
 		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
 		"jest": "^29.7.0",
-		"jest-preset-angular": "^14.1.0",
+		"jest-preset-angular": "^14.4.0-rc.0",
 		"mock-match-media": "^0.4.3",
 		"prettier": "^3.3.3",
 		"raw-loader": "^4.0.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
 		"storybook": "^8.3.5",
-		"typescript": "~5.4.5",
+		"typescript": "~5.6.3",
 		"typescript-eslint": "8.10.0"
 	}
 }
